<resources>
    <string name="app_name" translatable="false">Liga ETc</string>
    <string name="liga" translatable="false">Liga</string>
    <string name="user">User:</string>
    <string name="guest">Guest</string>
    <string name="radiobutton" translatable="false">RadioButton</string>
    <string name="ok" translatable="false">OK</string>
    <string name="student" translatable="false">Student</string>
    <string name="author">Author: Andrei Moldovan</string>
    <string name="username" translatable="false">Username:</string>
    <string name="lbl_year">Year:</string>
    <string name="lbl_series">Series:</string>
    <string name="lbl_group">Group:</string>
    <string name="lbl_subgroup">Subgroup:</string>
    <string name="btn_options">Options</string>
    <string name="opt_teme">Homework</string>
    <string name="opt_modificari">Changes</string>
    <string name="opt_sport" translatable="false">Sport</string>
    <string-array name="group_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="changes_array">
        <item>Temporary</item>
        <item>Permanent</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="azi">Today</string>
    <string name="maine">Tomorrow</string>
    <string name="poimaine">In 2 Days</string>
    <string name="opt_deconectare">Log out</string>


</resources>
