<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="d.ligaetc.MainActivity"
    android:theme = "@style/AppTheme">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"/>

        <android.support.v7.widget.Toolbar
            android:id="@+id/main2_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|enterAlways">

        </android.support.v7.widget.Toolbar>
    <Button
        android:text="@string/azi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnazi"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

    <Button
        android:text="@string/maine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnmaine"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

    <Button
        android:text="@string/poimaine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnpoimaine"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_materii"
        android:layout_below="@id/main2_toolbar"
        android:layout_alignParentStart="true"
        android:layout_above="@id/btnazi"
        android:layout_marginBottom="20dp"/>



</RelativeLayout>

